# llm-harness

./: .coverage  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  coverage.xml  main.py  pyproject.toml
.github/workflows/: docs.yml  test-report.yml  tests.yml
assets/kvstore/: crash-0e3b2c1e2ca11bf7793b92bbe978375d8a9b6890  crash-82f6bc38030d4ccfc33e00f583ece2454fdd1462  harness  kvstore.c  kvstore.h
assets/kvstore/harnesses/: harness.c
docs/: index.html  llm_harness.html  search.js
docs/llm_harness/: cli.html  config.html  core.html  harness_generation.html  harness_utils.html  harness_utlis.html  io.html  models.html  utils.html
docs/llm_harness/core/: analyzer.html  builder.html  evaluator.html  generator.html
docs/llm_harness/io/: file_manager.html
docs/llm_harness/models/: project.html
src/llm_harness/: __init__.py  cli.py  config.py  harness_generation.py  harness_utils.py  harness_utlis.py  utils.py
src/llm_harness/core/: analyzer.py  builder.py  evaluator.py  generator.py
src/llm_harness/io/: file_manager.py
src/llm_harness/models/: project.py
src/llm_harness/prompts/: prompt.txt
tests/: test_analyzer.py  test_cli.py  test_file_manager.py  test_generator.py  test_integration.py  test_models.py  test_placeholder.py
