[project]
name = "llm-harness"
version = "0.1.0"
description = "LLM-generated harnesses for your C/C++ project."
authors = [{ name = "Konstantinos Chousos", email = "kon.chousos@gmail.com" }]
requires-python = ">=3.10,<3.13"
readme = "README.md"
dependencies = [
    "dspy (>=2.6.17,<3.0.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
]

[dependency-groups]
docs = ["pdoc>=15.0.2,<16"]
dev = [
    "pytest>=8.3.5,<9",
    "pytest-cov>=6.1.1,<7",
    "ruff>=0.11.6,<0.12",
    "pre-commit>=4.2.0,<5",
    "mypy>=1.15.0",
]

[tool.uv]
default-groups = ["docs", "dev"]

[[tool.mypy.overrides]]
module = "dspy.*"
ignore_missing_imports = true

[tool.hatch.build.targets.sdist]
include = ["src/llm_harness"]

[tool.hatch.build.targets.wheel]
include = ["src/llm_harness"]

[tool.hatch.build.targets.wheel.sources]
"src/llm_harness" = "llm_harness"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 79
